# storage/api-docs/api-docs.json
@@ -1,8 +1,15 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "L5 OpenApi",
-        "description": "L5 Swagger OpenApi description",
+        "title": "Workers Schedule OpenApi Demo Documentation",
+        "description": "This API generates three shifts per day for workers, a worker cannot have more than one shift per day, it also ensures all workers get same shift distributiondescription",
+        "contact": {
+            "email": "adeolaadebisi001@gmailadmin@admin.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0.0"
     },
     "paths": {
@@ -469,11 +476,5 @@
                 "scheme": "Bearer"
             }
         }
-    },
-    "tags": [
-        {
-            "name": "Authorize",
-            "description": "User login required"
-        }
-    ]
+    }
 }
